# deeponet_benchmark

./: .gitignore  README.md  main.py  pyproject.toml
