[project]
name = "mp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.5",
  "numpy>=2.2.6",
  # 여기에 다른 의존성들…
  "pandas>=2.3.2",
  "scipy>=1.15.3",
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "torchvision>=0.23.0",
]

[tool.uv]
# Windows x64(AMD64)용 wheel이 반드시 존재하도록 요구
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

# (선택) 해석 전략/기타는 기본값으로 충분

# PyTorch CUDA 12.8 인덱스 등록
[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true

# torch 계열만 위 인덱스를 사용하도록 명시
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
